--- a/Views/pages/register.ejs
+++ b/Views/pages/register.ejs
@@ -11,10 +11,38 @@
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name='email' placeholder="Enter email">
+                        <% if (message.msg) { %>
+                            <span class="validation">
+                                <%= message %>
+                            </span>
+                            <% } %>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Username</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name='username' placeholder="Enter email">
+                        <% if (message.msg) { %>
+                            <span class="validation">
+                                <%= message %>
+                            </span>
+                            <% } %>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Full Name</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name='name' placeholder="Enter email">
+                        <% if (message.msg) { %>
+                            <span class="validation">
+                                <%= message %>
+                            </span>
+                            <% } %>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" name="password" placeholder="Password">
+                        <input type="password" class="form-control" id="exampleInputPassword1" name="password" placeholder="password">
+                        <% if (message.msg) { %>
+                            <span class="validation">
+                                <%= message %>
+                            </span>
+                            <% } %>
                     </div>
                     <button type="submit" class="btn btn-primary">Log In</button>
                 </form>
