--- a/Views/pages/signup.ejs
+++ b/Views/pages/signup.ejs
@@ -14,11 +14,6 @@
 
 
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Username</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name='username' placeholder="Enter email">
-
-                    </div>
 
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
@@ -31,3 +26,31 @@
     </body>
 
     </html>
+
+
+    <script>
+        const form = document.querySelector('form');
+
+        form.addEventListener('submit', async(e) => {
+            e.preventDefault();
+            const email = form.email.value;
+            const password = form.password.value;
+
+            try {
+                const res = await fetch('/signup', {
+                    method: 'POST',
+                    body: JSON.stringify({
+                        email,
+                        password
+                    }),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                })
+
+            } catch (err) {
+                console.log(err);
+            }
+
+        })
+    </script>
