--- a/Views/template/nav.ejs
+++ b/Views/template/nav.ejs
@@ -6,7 +6,13 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Login</a>
+
+            <% if(user){%>
+                <a class="nav-item nav-link" href="/logout">Logout</a>
+                <%   }else {%>
+                    <a class="nav-item nav-link" href="/login">Login</a>
+                    <a class="nav-item nav-link" href="/register">Register</a>
+                    <% }%>
         </div>
     </div>
 </nav>
