--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,3 +1,25 @@
 .js-create-board {
     cursor: pointer;
 }
+
+body {
+    font-family: "Nunito", sans-serif;
+    background-repeat: no-repeat;
+}
+
+nav {
+    padding: 12px 16px;
+}
+
+.nav-auth {
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+nav .logo img {
+    height: 42px;
+}
+
+nav .fa-bell {
+    top: 10px;
+}
