--- a/Views/template/nav.ejs
+++ b/Views/template/nav.ejs
@@ -1,18 +1,29 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">TODO</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-
-            <% if(user){%>
-                <a class="nav-item nav-link" href="/logout">Logout</a>
-                <%   }else {%>
-                    <a class="nav-item nav-link" href="/login">Login</a>
-                    <a class="nav-item nav-link" href="/register">Register</a>
-                    <% }%>
+<% if(user){%>
+    <nav>
+        <div class="flex">
+            <div class="logo"><img src="./images/logo.jpg" alt=""></div>
+            <a href="" class="font-semibold text-xl tracking-wide text-gray-600 mx-3 leading-loose">Boards</a>
+            <a href="" class="font-semibold text-xl tracking-wide text-gray-600 mx-2 leading-loose">Teams</a>
+            <div class="w-1/5 ml-4">
+                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" id="inline-full-name" type="text" value="Jane Doe">
+            </div>
+            <div class="nav-auth">
+                <i class="fas fa-bell text-4xl relative text-blue-500 mx-3"></i>
+                <img class=" h-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="./images/avatar.png">
+                <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">Log out</button>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+    <%   }else {%>
+        <nav>
+            <div class="flex">
+                <div class="logo"><img src="./images/logo.jpg" alt=""></div>
+                <div class="nav-auth">
+                    <button class="bg-blue-500 hover:bg-transparent  border hover:text-blue-700 hover:border-blue-500 text-white font-bold py-2 px-4 rounded">
+                        Log In</button>
+                    <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
+                            Register</button>
+                </div>
+            </div>
+        </nav>
+        <% }%>
