--- a/Views/pages/signup.ejs
+++ b/Views/pages/signup.ejs
@@ -4,68 +4,39 @@
     <body>
 
         <%- include('../template/nav')-%>
-            <div class="container">
 
-                <form class="small-container" method="POST" action="">
-                    <h3>Member Register</h3>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name='email' placeholder="Enter email">
-                        <span id="email-validation"></span>
 
-                    </div>
+            <div class="container mx-auto">
+                <div class="logo logo-font mx-auto"><span>Create your Ace account</span></div>
+                <div class="w-full max-w-sm mx-auto mt-32">
 
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" name="password" placeholder="password">
-                        <span id="password-validation"></span>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Log In</button>
-                </form>
+                    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="email"> Email Adress </label>
+                            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" name="email" placeholder="email@ace.com">
+                            <p id="email-validation" class="text-red-500 text-xs italic"></p>
+                        </div>
+                        <div class="mb-6">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="password"> Password  </label>
+                            <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" name="password" type="password" placeholder="******************">
+                            <p id="password-validation" class="text-red-500 text-xs italic"></p>
+                        </div>
+                        <div class="flex items-center justify-between">
+                            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+                            Sign In
+                        </button>
+                            <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
+                            Forgot Password?
+                        </a>
+                        </div>
+                    </form>
+                    <p class="text-center text-gray-500 text-xs">
+                        &copy;2020 Acme Corp. All rights reserved.
+                    </p>
+                </div>
+            </div>
 
+            <script src="/JS/Register.js"></script>
     </body>
 
     </html>
-
-
-    <script>
-        const form = document.querySelector('form');
-        const emailError = document.querySelector('#email-validation');
-        const passwordError = document.querySelector('#password-validation');
-        form.addEventListener('submit', async(e) => {
-
-            e.preventDefault();
-
-            emailError.textContent = "";
-            passwordError.textContent = "";
-            const email = form.email.value;
-            const password = form.password.value;
-
-            try {
-                const res = await fetch('/signup', {
-                    method: 'POST',
-                    body: JSON.stringify({
-                        email,
-                        password
-                    }),
-                    headers: {
-                        'Content-Type': 'application/json'
-                    }
-                })
-
-                //return errors
-                const data = await res.json();
-                if (data.errors) {
-                    emailError.textContent = data.errors.email;
-                    passwordError.textContent = data.errors.password;
-                }
-                if (data.user) {
-                    location.assign('/')
-                }
-
-            } catch (err) {
-                console.log(err);
-            }
-
-        })
-    </script>
