--- a/Views/pages/my-profile.ejs
+++ b/Views/pages/my-profile.ejs
@@ -4,36 +4,41 @@
     <body>
 
         <%- include('../template/nav')-%>
-            <div class="container mx-auto flex">
-                <div class="w-full max-w-sm mx-auto mt-32">
-                    <form class="w-full max-w-sm">
+            <div class=" mx-auto flex justify-center">
+                <div class="w-full max-w-sm  mt-32">
+                    <form class="w-full max-w-sm" id="editUserForm">
                         <div class="md:flex md:items-center mb-6">
                             <div class="md:w-1/3">
                                 <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name"> Full Name</label>
                             </div>
                             <div class="md:w-2/3">
-                                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" id="inline-full-name" type="text" value="Jane Doe">
+                                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" id="inline-full-name" type="text" name="fullname" placeholder="Your Full Name"
+                                    value="<%=user.fullname %>">
+                                <p id="fullname-validation" class="text-red-500 text-xs italic"></p>
                             </div>
                         </div>
                         <div class="md:flex md:items-center mb-6">
                             <div class="md:w-1/3">
-                                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name"> Username</label>
+                                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-username-name"> Username</label>
                             </div>
                             <div class="md:w-2/3">
-                                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" id="inline-full-name" type="text" value="Jane Doe">
+                                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" id="inline-user-name" name="username" type="text" placeholder="Your Username"
+                                    value="<%=user.username %>">
+                                <p id="username-validation" class="text-red-500 text-xs italic"></p>
                             </div>
                         </div>
                         <div class="md:flex md:items-center mb-6">
                             <div class="md:w-1/3">
-                                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-password"> Email </label>
+                                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-email"> Email </label>
                             </div>
                             <div class="md:w-2/3">
-                                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500 " id="inline-password" type="email" placeholder="">
+                                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500 " id="inline-email" name="email" type="email" value="<%=user.email %>">
+                                <p id="email-validation" class="text-red-500 text-xs italic"></p>
                             </div>
                         </div>
                         <div class="md:flex md:items-center">
                             <div class="md:w-11/12 relative left-34">
-                                <button class=" w-full my-2 bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded " type="button">
+                                <button class=" w-full my-2 bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded " type="submit">
                                 Save
                             </button>
                             </div>
@@ -43,7 +48,7 @@
                         &copy;2020 Ace Corp. All rights reserved.
                     </p>
                 </div>
-                <div class="w-full max-w-sm mx-auto mt-32">
+                <div class="w-full max-w-sm mt-32">
                     <form action="" class="flex flex-col justify-center items-center">
                         <img class="h-28  rounded-full  mb-4" src="./images/avatar.png">
                         <button class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center ">
@@ -56,7 +61,7 @@
 
                 </div>
             </div>
-
+            <script src="./JS/editProfile.js"></script>
     </body>
 
     </html>
