--- a/Views/template/nav.ejs
+++ b/Views/template/nav.ejs
@@ -5,7 +5,7 @@
             <a href="/my-boards" class="font-semibold text-xl tracking-wide text-gray-600 mx-3 leading-loose">Boards</a>
             <a href="/teams" class="font-semibold text-xl tracking-wide text-gray-600 mx-2 leading-loose">Teams</a>
             <div class="w-1/5 ml-4">
-                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" id="inline-full-name" type="text" placeholder="Search">
+                <input class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="text" placeholder="Search">
             </div>
             <div class="nav-auth">
                 <i class="fas fa-bell text-4xl relative text-blue-500 mx-3"></i>
