--- a/Views/pages/login.ejs
+++ b/Views/pages/login.ejs
@@ -16,7 +16,7 @@
                         </div>
                         <div class="mb-6">
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="password"> Password  </label>
-                            <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" name="password" type="password" placeholder="******************">
+                            <input class="shadow appearance-none border  rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" name="password" type="password" placeholder="******************">
                             <p id="password-validation" class="text-red-500 text-xs italic"></p>
                         </div>
                         <div class="flex items-center justify-between">
