--- a/Views/pages/my-profile.ejs
+++ b/Views/pages/my-profile.ejs
@@ -50,7 +50,7 @@
                 </div>
                 <div class="w-full max-w-sm mt-32">
                     <form action="" enctype="multipart/form-data" id="imageUpload" class="flex flex-col justify-center items-center">
-                        <img class="h-28 w-28 rounded-full  mb-4" id="profileImage" src="./images/avatar.png">
+                        <img class="h-28 w-28 rounded-full  mb-4" id="profileImage" src="./images/UserProfiles/<%= user.image %> ">
                         <button class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center " type="button">
                         <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M13 8V2H7v6H2l8 8 8-8h-5zM0 18h20v2H0v-2z"/></svg>
                         <input type="file" name="image" id="inpFile" class="hidden" onchange="uploadPicture(this)" accept="image/*">
