--- a/Views/pages/board-details.ejs
+++ b/Views/pages/board-details.ejs
@@ -10,38 +10,44 @@
                     <%= board.name %>
                 </h1>
             </div>
-            <div class="container-fluid">
-                <div class="cards d-flex justify-content-around">
-                    <% lists.forEach(list => {%>
-                        <div class="card" id="<%= list.id %> ">
-                            <h1>
+
+
+            <div class="lists flex flex-1">
+
+                <% lists.forEach(list => {%>
+                    <div id="<%= list.id %>" class="list  mx-4 relative w-64 bg-gray-200 rounded ">
+                        <div class="header flex justify-between p-3 text-color">
+                            <h1 class="font-bold text-xl mb-2">
                                 <%= list.header %>
                             </h1>
-                            <ul class="list-group">
+                            <i class="fas fa-ellipsis-h cursor-pointer hover:bg-gray-300 px-1 h-5 rounded"></i>
+                        </div>
+                        <div class="body">
+                            <ul>
                                 <% list.listItems.forEach(item => {%>
-                                    <li class="list-group-item">
+                                    <li class="bg-white rounded  mx-auto my-2 px-2 py-1">
                                         <%= item %>
                                     </li>
                                     <% });  %>
-                                        <li><textarea name="new task" id="listItem" cols="30" rows="1"></textarea></li>
-
                             </ul>
-                            <input type="submit" id="Cart" class="btn btn-primary js-add-listItem">
+                            <div class="add-card relative">
+                                <i class="fas fa-plus text-gray-600  absolute"></i>
+                                <textarea oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"' class="block js-create-card bg-gray-200 appearance-none  rounded  pt-2  pl-8 text-gray-700 leading-tight focus:outline-none mx-auto resize-none" type="text" placeholder="Add a list"></textarea>
+                                <button class="js-add-card-button mb-2 hidden bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4  mx-2 mt-2 rounded"> Add list</button>
+                            </div>
+                        </div>
+                    </div>
+                    <%  }); %>
+                        <div class="add-list mx-4 relative w-64 pt-3 pl-2">
+                            <i class="fas fa-plus text-gray-600  absolute"></i>
+                            <input class="js-create-list bg-gray-200 appearance-none w-64 border-2 border-gray-200 rounded  py-2  pl-10 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" type="text" placeholder="Add a list">
+                            <button class="js-add-list-button hidden bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4   mt-2 rounded"> Add list</button>
                         </div>
 
-                        <%  }); %>
-
-                            <div class="card">
-                                <form id="createList" action="" method="POST">
-                                    <input class="list-name-input" type="text" name="listName" placeholder="Enter list title..." autocomplete="off" maxlength="512">
-                                    <button>Add List</button>
-                                </form>
-                            </div>
-
-                </div>
             </div>
 
-            <script src="/JS/fetchBoardOperations.js"></script>
+            <!-- <script src="/JS/fetchBoardOperations.js"></script> -->
+            <script src="/JS/listHandler.js"></script>
     </body>
 
     </html>
