--- a/Views/template/head.ejs
+++ b/Views/template/head.ejs
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>
+        <%= title %>
+    </title>
     <!-- CSS only -->
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/css/styles.css">
@@ -16,4 +18,5 @@
     <script src="https://kit.fontawesome.com/e3658e79d2.js" crossorigin="anonymous"></script>
     <!--  jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <link type="image/x-icon" rel="icon" href="/images/logo.jpg">
 </head>
