--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -18206,7 +18206,7 @@ video {
 .hover\:text-yellow-400:hover {
     --text-opacity: 1;
     color: #f6e05e;
-    color: rgba(246, 224, 94, var(--text-opacity));
+    color: rgba(246, 224, 94, var(--text-opacity)) !important;
 }
 
 .hover\:text-yellow-500:hover {
