--- a/Views/pages/home.ejs
+++ b/Views/pages/home.ejs
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-            <div class="fixed z-10 inset-0 overflow-y-auto js-modal pointer-evensts-none">
+            <div class="fixed z-10 inset-0 overflow-y-auto js-modal hidden pointer-evensts-none">
                 <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0 ">
                     <!--
                 Background overlay, show/hide based on modal state.
@@ -103,7 +103,7 @@
                 </div>
             </div>
 
-            <script src="./JS/modal.js"></script>
+            <script src="/JS/modal.js"></script>
 
     </body>
 
