routing and new home page

--- a/Views/template/head.ejs
+++ b/Views/template/head.ejs
@@ -8,6 +8,8 @@
         <%= title %>
     </title>
     <!-- CSS only -->
+    <!-- AOS CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/css/styles.css">
     <!-- My CSS -->
