--- a/Views/template/nav.ejs
+++ b/Views/template/nav.ejs
@@ -15,7 +15,7 @@
         </div>
     </nav>
     <%   }else {%>
-        <nav>
+        <nav class="fixed w-full bg-white z-10" data-aos="fade-up" data-aos-duration="1500">
             <div class="flex">
                 <div class="logo-img"><img src="/images/logo.jpg" alt=""></div>
                 <div class="nav-auth">
