cosmetic upgrades to search bar

--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -103,3 +103,7 @@ nav .fa-bell {
 .text-color {
     color: #4a5568
 }
+
+nav .result {
+    box-shadow: 0 8px 16px -4px rgba(9, 30, 66, .25), 0 0 0 1px rgba(9, 30, 66, .08);
+}
