--- a/Views/pages/my-boards.ejs
+++ b/Views/pages/my-boards.ejs
@@ -6,6 +6,7 @@
         <%- include('../template/nav')-%>
             <div class="lg:container lg:mx-auto">
                 <div class="boards-list">
+                    <div class="boards-container" id="search"></div>
                     <div class="boards-container" id="starred">
                         <h1 class="font-semibold text-xl tracking-wide text-blue-800 mx-2 leading-loose"> <i class="fas fa-star text-blue-500"></i> Starred Boards</h1>
                         <div class="boards flex flex-wrap">
