--- a/Views/partials/searchBoards.ejs
+++ b/Views/partials/searchBoards.ejs
@@ -1,28 +1,8 @@
-<div class="lg:container lg:mx-auto">
-    <div class="boards-list">
-
-        <div class="boards-container " id="personal ">
-
-            <div class="boards flex flex-wrap">
-                <% if (boards.length>0) { %>
-                    <% boards.forEach(board => { %>
-                        <div id="<%= board._id %>" class="board border w-56 h-28 rounded mx-4 my-2 relative overflow-hidden <%= board.color %>">
-                            <h6 class="font font-semibold text-base p-2">
-                                <%= board.name %>
-                            </h6>
-                            <% if(board.starred===true) {%>
-                                <i class="js-add-fav far fa-star  text-yellow-300 absolute bottom-0 right-0 p-3 hover:text-yellow-400"></i>
-                                <%}else{%>
-                                    <i class="js-add-fav far fa-star  right text-gray-400 absolute bottom-0 right-0 p-3"></i>
-                                    <% }%>
-                        </div>
-                        <%}); } %>
-                            <div class="js-create-board board bg-gray-200 border w-56 h-28  rounded mx-4 my-2 relative overflow-hidden flex items-center justify-center">
-                                <h6 class="font text-gray-600 text-base text-center p-2 cursor-pointer ">Create new board</h6>
-                            </div>
-            </div>
-        </div>
-
-
-    </div>
-</div>
+<% if (boards.length>0) { %>
+    <% boards.forEach(board => { %>
+        <li class="px-2 py-3 border-t rounded hover:bg-gray-200">
+            <a href="/my-boards/<%= board.id %>">
+                <%= board.name %>
+            </a>
+        </li>
+        <%}); } %>
