--- a/Views/pages/my-boards.ejs
+++ b/Views/pages/my-boards.ejs
@@ -6,13 +6,12 @@
         <%- include('../template/nav')-%>
             <div class="lg:container lg:mx-auto">
                 <div class="boards-list">
-                    <div class="boards-container" id="search"></div>
                     <div class="boards-container" id="starred">
                         <h1 class="font-semibold text-xl tracking-wide text-blue-800 mx-2 leading-loose"> <i class="fas fa-star text-blue-500"></i> Starred Boards</h1>
                         <div class="boards flex flex-wrap">
                             <% if (favorites.length>0) { %>
                                 <% favorites.forEach(board => { %>
-                                    <div id="<%= board._id %>" class="board border w-56 h-28  rounded mx-4 my-2 relative overflow-hidden <%= board.color %>">
+                                    <div id="<%= board._id %>" class="board border w-56 h-28 cursor-pointer rounded mx-4 my-2 relative overflow-hidden <%= board.color %>">
                                         <h6 class="font font-semibold text-base p-2">
                                             <%= board.name %>
                                         </h6>
@@ -28,7 +27,7 @@
                         <div class="boards flex flex-wrap">
                             <% if (boards.length>0) { %>
                                 <% boards.forEach(board => { %>
-                                    <div id="<%= board._id %>" class="board border w-56 h-28 rounded mx-4 my-2 relative overflow-hidden <%= board.color %>">
+                                    <div id="<%= board._id %>" class="board border w-56 h-28 cursor-pointer rounded mx-4 my-2 relative overflow-hidden <%= board.color %>">
                                         <h6 class="font font-semibold text-base p-2">
                                             <%= board.name %>
                                         </h6>
@@ -48,7 +47,7 @@
                     <div class="boards-container " id="teams ">
                         <h1 class="font-semibold text-xl tracking-wide text-blue-800 mx-2 leading-loose "> <i class="fas fa-users text-blue-500 "></i> Team Boards</h1>
                         <div class="boards flex flex-wrap">
-                            <div class="board border w-56 h-28  rounded mx-4 my-2 relative overflow-hidden">
+                            <div class="board border cursor-pointer w-56 h-28  rounded mx-4 my-2 relative overflow-hidden">
                                 <h6 class="font font-semibold text-base p-2">Board name</h6>
                                 <i class="far fa-star right text-gray-400 absolute bottom-0 right-0 p-3"></i>
                             </div>
