--- a/Views/pages/board-details.ejs
+++ b/Views/pages/board-details.ejs
@@ -4,9 +4,9 @@
     <body>
 
         <%- include('../template/nav')-%>
-            <div class="container">
+            <div class="ml-2">
 
-                <h1>
+                <h1 class="font-bold text-xl mb-2">
                     <%= board.name %>
                 </h1>
             </div>
