--- a/Views/template/nav.ejs
+++ b/Views/template/nav.ejs
@@ -14,8 +14,12 @@
             </div>
             <div class="nav-auth">
                 <i class="fas fa-bell text-4xl relative text-blue-500 mx-3"></i>
-                <img class=" h-10 w-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="/images/UserProfiles/<%= user.image %>" onclick="location.href='/my-profile'">
-                <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" onclick="location.href = '/logout'">Log out</button>
+                <% if(user.image){ %>
+                    <img class=" h-10 w-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="/images/UserProfiles/<%= user.image %>" onclick="location.href='/my-profile'">
+                    <% } else { %>
+                        <img class=" h-10 w-10 rounded-full mx-auto md:mx-0 md:mr-3 inline-block" src="/images/avatar.png" onclick="location.href='/my-profile'">
+                        <% }  %>
+                            <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" onclick="location.href = '/logout'">Log out</button>
             </div>
         </div>
     </nav>
