--- a/Views/template/head.ejs
+++ b/Views/template/head.ejs
@@ -21,4 +21,5 @@
     <!--  jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <link type="image/x-icon" rel="icon" href="/images/logo.jpg">
+    <link rel="shortcut icon" href="#" />
 </head>
